MDL-10704 - removed letter-spacing to avoid the Khmer rendering issue

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -38,7 +38,7 @@
 body, table, td, th, li {
   font-family:Arial, Verdana, Helvetica, sans-serif;
   font-size:100%;
-  letter-spacing:0.02em;
+  /*letter-spacing:0.02em;*/
 }
 
 th {
